--- a/css/index.css
+++ b/css/index.css
@@ -7,3 +7,9 @@
 .texto-footer {
     color: white;
 }
+
+.texto-footer:hover {
+    font-size: 105%;
+    color: blue;
+    text-decoration: none;
+}
