--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,28 @@
     padding: 0px;
     box-sizing: border-box;
 }
-.cards-wrapper{
+
+.cards-wrapper {
     display: flex;
+}
+
+.carousel-inner {
+    padding: 1em;
+}
+
+.carousel-control-prev , .carousel-control-next {
+    background-color: black;
+    width: 6vh;
+    height: 6vh;
+    border-radius: 50%;
+    top: 50%;
+}
+
+.card1 {
+    background-color: aliceblue;
+    margin: 3em;
+    width: calc(100%/3);
+    border: none;
+    border-radius: 20px;
+    box-shadow: 2px 6px 8px 0 rgb(rgba(255, 0, 0, 0), rgba(255, 255, 255, 0.441), rgba(0, 0, 0, 0.342));
 }
