--- a/css/index.css
+++ b/css/index.css
@@ -28,3 +28,8 @@
     border-radius: 20px;
     box-shadow: 2px 6px 8px 0 rgb(rgba(255, 0, 0, 0), rgba(255, 255, 255, 0.441), rgba(0, 0, 0, 0.342));
 }
+
+.dropdown {
+    display: flex;
+    justify-content: space-evenly;
+}
